# ChangeLog for kde-base/kdepim-strigi-analyzer
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-strigi-analyzer/ChangeLog,v 1.170 2014/04/05 18:05:43 dilfridge Exp $

  05 Apr 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  kdepim-strigi-analyzer-4.4.11.1.ebuild:
  EAPI bump

  12 Dec 2013; Agostino Sarubbo <ago@gentoo.org>
  -kdepim-strigi-analyzer-4.10.5.ebuild:
  Remove old

*kdepim-strigi-analyzer-4.4.11.1 (10 Oct 2013)

  10 Oct 2013; Chris Reffett <creffett@gentoo.org>
  +kdepim-strigi-analyzer-4.4.11.1.ebuild:
  Actually add 4.4.11.1 this time.

  10 Oct 2013; Chris Reffett <creffett@gentoo.org>
  -kdepim-strigi-analyzer-4.4.11.1.ebuild:
  Drop KDE SC 4.11.1

  02 Aug 2013; Johannes Huber <johu@gentoo.org>
  -kdepim-strigi-analyzer-4.10.4.ebuild:
  Remove KDE SC 4.10.4

  02 Aug 2013; Agostino Sarubbo <ago@gentoo.org>
  kdepim-strigi-analyzer-4.10.5.ebuild:
  Stable for ppc64, wrt to bug #477634

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org>
  kdepim-strigi-analyzer-4.10.5.ebuild:
  Stable for ppc, wrt to bug #477634

  29 Jul 2013; Agostino Sarubbo <ago@gentoo.org>
  kdepim-strigi-analyzer-4.10.5.ebuild:
  Stable for x86, wrt to bug #477634

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org>
  kdepim-strigi-analyzer-4.10.5.ebuild:
  Stable for amd64, wrt to bug #477634

*kdepim-strigi-analyzer-4.10.5 (02 Jul 2013)

  02 Jul 2013; Johannes Huber <johu@gentoo.org>
  +kdepim-strigi-analyzer-4.10.5.ebuild:
  Version bump KDE SC 4.10.5

  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org>
  -kdepim-strigi-analyzer-4.10.3.ebuild:
  Remove old

  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org>
  kdepim-strigi-analyzer-4.10.4.ebuild:
  Stable for ppc64, wrt to bug #473942

  01 Jul 2013; Agostino Sarubbo <ago@gentoo.org>
  kdepim-strigi-analyzer-4.10.4.ebuild:
  Stable for ppc, wrt to bug #473942

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org>
  kdepim-strigi-analyzer-4.10.4.ebuild: