@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdepim-strigi-analyzer
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-strigi-analyzer/ChangeLog,v 1.170 2014/04/05 18:05:43 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-strigi-analyzer/ChangeLog,v 1.171 2014/08/11 21:31:17 johu Exp $
+
+*kdepim-strigi-analyzer-4.4.11.1-r1 (11 Aug 2014)
+
+  11 Aug 2014; Johannes Huber <johu@gentoo.org>
+  +kdepim-strigi-analyzer-4.4.11.1-r1.ebuild:
+  Add missing DEPEND, bug #515146.
 
   05 Apr 2014; Andreas K. Huettel <dilfridge@gentoo.org>
   kdepim-strigi-analyzer-4.4.11.1.ebuild:
